[gd_scene load_steps=2 format=3 uid="uid://ckap5eabxuiku"]

[ext_resource type="Script" path="res://Enemies/Scenes/enemy_spawner.gd" id="1_o2fyc"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_o2fyc")
enemiesUntilBoss = 1000

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CountEnemies" type="Timer" parent="."]
wait_time = 0.09
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CountEnemies" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="CountEnemies" to="." method="_on_count_enemies_timeout"]
