[gd_scene load_steps=2 format=3 uid="uid://ckap5eabxuiku"]

[ext_resource type="Script" path="res://Scenes/enemy_spawner.gd" id="1_skid6"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_skid6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CountGnomes" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CountGnomes" to="." method="_on_count_gnomes_timeout"]
